--- a/src/components/cores/pagination/pagination.module.scss
+++ b/src/components/cores/pagination/pagination.module.scss
@@ -1,26 +1,28 @@
 @use "src/variables";
 .pagination {
-  width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
-  &-selected b {
-    text-decoration: underline;
-  }
-  > div {
-    cursor: pointer;
-    &:first-child {
-      margin-left: 8px;
+  margin-top: 24px;
+  > div:last-child {
+    display: flex;
+    &-selected b {
+      text-decoration: underline;
     }
-    &:not(:last-child)::after {
-      content: "-";
-      margin: 0 4px;
-    }
-    > b {
-      font-size: 18px;
-      @media (max-width: variables.$breakpoint-lg) {
-        font-size: 16px;
+    > div {
+      cursor: pointer;
+      &:first-child {
+        margin-left: 8px;
+      }
+      &:not(:last-child)::after {
+        content: "-";
+        margin: 0 4px;
+      }
+      > b {
+        font-size: 18px;
+        @media (max-width: variables.$breakpoint-lg) {
+          font-size: 16px;
+        }
       }
     }
   }
