--- a/src/App.scss
+++ b/src/App.scss
@@ -79,6 +79,8 @@
     color: variables.$secondary-color;
     margin: 0;
     font-size: 16px;
+    display: flex;
+    align-items: center;
     @media (max-width: variables.$breakpoint-lg) {
       font-size: 13px;
     }
