--- a/src/components/cores/dropdown/dropdown.module.scss
+++ b/src/components/cores/dropdown/dropdown.module.scss
@@ -47,7 +47,7 @@
       display: block;
     }
     &-profile {
-      width: 150px;
+      min-width: 150px;
       ul > li {
         cursor: default;
         padding: 8px 0;
