--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -3,6 +3,7 @@
 .tooltip {
   margin-left: 8px;
   background-color: variables.$secondary-color;
+  border: 1px solid white;
   width: 15px;
   height: 15px;
   display: flex;
@@ -11,6 +12,14 @@
   border-radius: 50%;
   cursor: pointer;
   position: relative;
+  z-index: 10;
+  @media (max-width: variables.$breakpoint-lg) {
+    width: 13px;
+    height: 13px;
+    > small {
+      font-size: 10px;
+    }
+  }
   > small {
     color: white;
     font-style: italic;
@@ -27,6 +36,5 @@
     background-color: rgba($color: #000000, $alpha: 0.8);
     color: white;
     font-size: 13px;
-    z-index: 100;
   }
 }
