fix: fixed cookies and filters

--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -16,6 +16,7 @@
   @media (max-width: variables.$breakpoint-lg) {
     width: 13px;
     height: 13px;
+    margin-left: 4px;
     > small {
       font-size: 10px;
     }
