--- a/src/components/cores/type/type.module.scss
+++ b/src/components/cores/type/type.module.scss
@@ -1,3 +1,5 @@
+@use "src/variables";
+
 .type {
   display: flex;
   align-items: center;
@@ -12,5 +14,11 @@
     width: 16px;
     height: 16px;
     margin-right: 4px;
+  }
+  &-active {
+    background-color: white;
+    border: 1px solid #dadada;
+    opacity: 1 !important;
+    border: 1px solid variables.$primary-color;
   }
 }
