--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -17,15 +17,15 @@
     width: 13px;
     height: 13px;
     margin-left: 4px;
-    > small {
-      font-size: 10px;
-    }
   }
   > small {
     color: white;
     font-style: italic;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
+    @media (max-width: variables.$breakpoint-lg) {
+      font-size: 10px;
+    }
   }
   > div {
     position: absolute;
@@ -36,6 +36,5 @@
     border-radius: 5px;
     background-color: rgba($color: #000000, $alpha: 0.8);
     color: white;
-    font-size: 13px;
   }
 }
