--- a/src/pages/session-details/session-details.module.scss
+++ b/src/pages/session-details/session-details.module.scss
@@ -33,6 +33,10 @@
       position: absolute;
       top: 16px;
       left: 8px;
+      @media (max-width: variables.$breakpoint-lg) {
+        left: 12px;
+        top: 12px;
+      }
     }
   }
   &-widgets {
