--- a/src/components/cores/video-player/video-player.module.scss
+++ b/src/components/cores/video-player/video-player.module.scss
@@ -7,4 +7,22 @@
     top: 0;
     left: 0;
   }
+  &-file {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    button {
+      border: 1px solid #5085f0;
+      padding: 12px 16px;
+      font-size: 18px;
+      color: #5085f0;
+      background-color: white;
+      border-radius: 10px;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+  }
 }
