--- a/src/pages/recordings/recordings.module.scss
+++ b/src/pages/recordings/recordings.module.scss
@@ -12,7 +12,7 @@
     width: 65%;
     margin-bottom: 24px;
     @media (max-width: variables.$breakpoint-lg) {
-      width: 73%;
+      width: 75%;
     }
   }
   &-highlights-container {
@@ -40,7 +40,8 @@
     align-items: center;
     flex-wrap: wrap;
     > div {
-      width: 18%;
+      width: 32%;
+      height: 75px;
       margin-top: 16px;
     }
     &-playing > div {
