--- a/src/App.scss
+++ b/src/App.scss
@@ -80,7 +80,8 @@
     margin: 0;
     font-size: 16px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    white-space: pre-wrap;
     @media (max-width: variables.$breakpoint-lg) {
       font-size: 13px;
     }
