--- a/src/components/cores/activity-widget/activity-widget.module.scss
+++ b/src/components/cores/activity-widget/activity-widget.module.scss
@@ -1,6 +1,19 @@
 @use "src/variables";
 
 .activity-widget {
+  > ul {
+    padding: 0;
+    margin: 8px 0 0 0;
+    > li {
+      color: rgba($color: variables.$primary-color, $alpha: 0.5);
+      list-style: none;
+      font-weight: bold;
+      &:first-child {
+        color: rgba($color: variables.$primary-color, $alpha: 0.7);
+        margin-right: 8px;
+      }
+    }
+  }
   &-POSITIVE {
     color: variables.$POSITIVE-color;
   }
