--- a/src/components/cores/player-swap/player-swap.module.scss
+++ b/src/components/cores/player-swap/player-swap.module.scss
@@ -1,12 +1,27 @@
 @use "src/variables";
 
 .player-swap {
-  background-color: rgba($color: #000000, $alpha: 0.6);
+  padding: 4px 0;
+  // background-color: rgba($color: #000000, $alpha: 0.5);
   height: 100%;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  //display: flex;
+  // align-items: center;
+  // justify-content: center;
+  > h3 {
+    color: variables.$secondary-color;
+    margin: 0;
+    font-size: 16px;
+    display: flex;
+    align-items: flex-end;
+    white-space: pre-wrap;
+    width: 100%;
+    margin-bottom: 8px;
+    @media (max-width: variables.$breakpoint-lg) {
+      font-size: 13px;
+      margin-bottom: 4px;
+    }
+  }
   &-cross {
     width: 100%;
     margin-top: 4px;
@@ -17,11 +32,29 @@
       cursor: pointer;
     }
   }
+  &-list {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    > div {
+      width: calc(20% - 8px);
+      margin-right: 8px;
+      margin-bottom: 4px;
+      > span {
+        font-size: 10px;
+        background-color: rgba($color: #000000, $alpha: 0.6);
+      }
+      > div {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
   &-content {
     position: relative;
-    background-color: rgba($color: #ffffff, $alpha: 0.9);
-    padding: 0 12px;
-    width: 80%;
+    //background-color: rgba($color: #ffffff, $alpha: 0.9);
+    //padding: 0 12px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     border-radius: 10px;
@@ -34,7 +67,7 @@
         font-weight: bold;
       }
     }
-    > div:not(:first-child) {
+    > div {
       width: 100%;
       display: flex;
       justify-content: space-between;
