--- a/src/components/modules/field-overview/field-overview.module.scss
+++ b/src/components/modules/field-overview/field-overview.module.scss
@@ -1,8 +1,6 @@
 @use "src/variables";
 
 .field-overview {
-  border-radius: 10px;
-  overflow: hidden;
   width: 100%;
   &-top {
     background-image: url("../../../../public/img/field.png");
@@ -12,6 +10,7 @@
     width: 100%;
     height: 55%;
     min-height: 420px;
+    border-radius: 10px 10px 0 0;
     position: relative;
     @media (max-width: variables.$breakpoint-lg) {
       min-height: 355px;
@@ -104,7 +103,9 @@
   &-buttons {
     > div {
       &:first-child {
-        margin: 16px 0;
+        border-bottom: 1px solid variables.$tertiary-color;
+        //  border-top: 1px solid variables.$tertiary-color;
+        margin-bottom: 8px;
         display: flex;
         align-items: center;
         justify-content: space-between;
