--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -37,5 +37,9 @@
     background-color: rgba($color: #000000, $alpha: 0.8);
     color: white;
     z-index: 1000;
+    ul {
+      padding: 0;
+      margin: 0;
+    }
   }
 }
