--- a/src/components/modules/interactions/interactions.module.scss
+++ b/src/components/modules/interactions/interactions.module.scss
@@ -27,9 +27,11 @@
     > div {
       display: flex;
       align-items: center;
+      > *:not(:last-child) {
+        margin-right: 16px;
+      }
       > span {
         cursor: pointer;
-        margin-right: 16px;
         width: 13px;
         height: 13px;
         border: 3px dashed black;
