--- a/src/App.scss
+++ b/src/App.scss
@@ -26,8 +26,11 @@
     }
   }
   &-content {
-    margin-top: 48px;
+    margin-top: 36px;
     border-radius: 10px;
+    @media (max-width: variables.$breakpoint-lg) {
+      margin-top: 28px;
+    }
   }
 }
 .section {
