--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -31,15 +31,36 @@
     position: absolute;
     bottom: 20px;
     right: auto;
-    min-width: 150px;
+    min-width: 180px;
+    width: fit-content;
     padding: 8px;
     border-radius: 5px;
     background-color: rgba($color: #000000, $alpha: 0.8);
     color: white;
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    @media (max-width: variables.$breakpoint-lg) {
+      min-width: 140px;
+    }
+    h6 {
+      margin-bottom: 8px;
+      margin-top: 0;
+      color: white;
+      text-decoration: underline;
+      &:not(:first-child) {
+        margin-top: 12px;
+      }
+    }
     ul {
-      padding: 0;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: fit-content;
       margin: 0;
+      padding: 0 0 0 12px;
+      > li {
+      }
     }
   }
 }
