--- a/src/components/modules/field-overview/field-overview.module.scss
+++ b/src/components/modules/field-overview/field-overview.module.scss
@@ -23,7 +23,7 @@
           transform: rotate(180deg);
           margin-bottom: 24px;
           @media (max-width: variables.$breakpoint-lg) {
-            margin-bottom: 20px;
+            margin-bottom: 16px;
           }
         }
       }
@@ -35,7 +35,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     > div:not(:last-child) {
-      margin-bottom: 24px;
+      margin-bottom: 28px;
       @media (max-width: variables.$breakpoint-lg) {
         margin-bottom: 20px;
       }
@@ -50,17 +50,20 @@
     align-items: center;
     > span {
       margin-right: 8px;
-      padding: 0 2px;
+      padding: 1px;
       background-color: black;
       cursor: pointer;
       border-radius: 50%;
       border: 1px solid black;
+      display: flex;
+      align-items: center;
+      width: 14px;
+      height: 14px;
       svg {
-        margin: auto;
-        width: 13px;
-        height: 13px;
+        margin: 0 0 1px -1px;
         path {
           fill: white;
+          transform: scale(0.7);
         }
       }
     }
