fix: changed tooltips and date picker component

--- a/src/components/cores/classifications-widget/classifications-widget.module.scss
+++ b/src/components/cores/classifications-widget/classifications-widget.module.scss
@@ -29,6 +29,7 @@
       }
       > small {
         color: variables.$secondary-color;
+        text-align: center;
       }
     }
   }
@@ -43,7 +44,7 @@
         margin-bottom: 12px;
       }
       span {
-        font-size: 36px;
+        font-size: 32px;
         @media (max-width: variables.$breakpoint-xl) {
           font-size: 28px;
         }
