--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -14,6 +14,7 @@
   cursor: pointer;
   position: relative;
   z-index: 10;
+  font-size: 90%;
   @media (max-width: variables.$breakpoint-lg) {
     width: 13px;
     height: 13px;
@@ -31,8 +32,6 @@
     position: absolute;
     bottom: 20px;
     right: auto;
-    min-width: 180px;
-    width: fit-content;
     padding: 8px;
     border-radius: 5px;
     background-color: rgba($color: #000000, $alpha: 0.8);
@@ -40,9 +39,7 @@
     z-index: 1000;
     display: flex;
     flex-direction: column;
-    @media (max-width: variables.$breakpoint-lg) {
-      min-width: 140px;
-    }
+
     h6 {
       margin-bottom: 8px;
       margin-top: 0;
@@ -51,6 +48,9 @@
       &:not(:first-child) {
         margin-top: 12px;
       }
+    }
+    p {
+      margin: 4px 0;
     }
     ul {
       display: flex;
