fix: fixed date picker , filter by date in player profile and tooltips

--- a/src/components/cores/lightbox/lightbox.module.scss
+++ b/src/components/cores/lightbox/lightbox.module.scss
@@ -46,6 +46,10 @@
     visibility: hidden;
     -webkit-transition: opacity 200ms, visibility 200ms;
     transition: opacity 200ms, visibility 200ms;
+    > div {
+      max-height: 90vh;
+      max-width: 90vw;
+    }
   }
 
   &-open {
