--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -13,8 +13,9 @@
   border-radius: 50%;
   cursor: pointer;
   position: relative;
-  z-index: 10;
-  font-size: 90%;
+  z-index: auto;
+  font-size: 85%;
+  font-style: italic;
   @media (max-width: variables.$breakpoint-lg) {
     width: 13px;
     height: 13px;
@@ -31,26 +32,26 @@
   > div {
     position: absolute;
     bottom: 20px;
-    right: auto;
+    left: -40px;
     padding: 8px;
     border-radius: 5px;
-    background-color: rgba($color: #000000, $alpha: 0.8);
+    background-color: rgba($color: #000000, $alpha: 0.85);
     color: white;
-    z-index: 1000;
     display: flex;
     flex-direction: column;
+    z-index: 150;
 
-    h6 {
-      margin-bottom: 8px;
-      margin-top: 0;
-      color: white;
-      text-decoration: underline;
-      &:not(:first-child) {
-        margin-top: 12px;
-      }
-    }
+    // h6 {
+    //   margin-bottom: 8px;
+    //   margin-top: 0;
+    //   color: white;
+    //   text-decoration: underline;
+    //   &:not(:first-child) {
+    //     margin-top: 12px;
+    //   }
+    // }
     p {
-      margin: 4px 0;
+      margin-top: 0;
     }
     ul {
       display: flex;
@@ -59,8 +60,6 @@
       height: fit-content;
       margin: 0;
       padding: 0 0 0 12px;
-      > li {
-      }
     }
   }
 }
