--- a/src/pages/session-details/session-details.module.scss
+++ b/src/pages/session-details/session-details.module.scss
@@ -33,6 +33,7 @@
       position: absolute;
       top: 16px;
       left: 8px;
+      z-index: 10;
       @media (max-width: variables.$breakpoint-lg) {
         left: 12px;
         top: 12px;
