--- a/src/components/cores/tooltip/tooltip.module.scss
+++ b/src/components/cores/tooltip/tooltip.module.scss
@@ -14,7 +14,7 @@
   cursor: pointer;
   position: relative;
   z-index: auto;
-  font-size: 85%;
+  font-size: 13px;
   font-style: italic;
   @media (max-width: variables.$breakpoint-lg) {
     width: 13px;
@@ -35,7 +35,7 @@
     left: -40px;
     padding: 8px;
     border-radius: 5px;
-    background-color: rgba($color: #000000, $alpha: 0.85);
+    background-color: rgba($color: #000000, $alpha: 0.8);
     color: white;
     display: flex;
     flex-direction: column;
