--- a/src/components/cores/audio-player/audio-player.module.scss
+++ b/src/components/cores/audio-player/audio-player.module.scss
@@ -1,20 +1,20 @@
 @use "src/variables";
 
 .audio-player {
-  // height: 56px;
-  padding: 16px;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 3px 4px rgba($color: variables.$primary-color, $alpha: 0.2);
-  border-radius: 10px;
-  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
   > div {
-    height: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     > img {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
+      margin: auto;
+      object-fit: contain;
     }
   }
 
