--- a/src/components/modules/field-audio-overview/field-audio-overview.module.scss
+++ b/src/components/modules/field-audio-overview/field-audio-overview.module.scss
@@ -67,40 +67,11 @@
         }
       }
     }
-    ul {
+    > b {
+      border-radius: 10px;
+      padding: 2px 6px;
       font-size: 13px;
-    }
-
-    > div > div {
-      &:first-child > div {
-        padding: 2px 6px;
-        font-size: 13px;
-        background-color: rgba($color: #000000, $alpha: 0.3);
-      }
-      &:last-child {
-        top: 30px !important;
-      }
-    }
-  }
-  &-gradient {
-    > div {
-      &:first-child {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 8px;
-        > span {
-          color: variables.$tertiary-color;
-          font-size: 13px;
-        }
-      }
-      &:last-child {
-        display: flex;
-        width: 100%;
-        height: 15px;
-        > span {
-          width: 20%;
-        }
-      }
+      background-color: rgba($color: #000000, $alpha: 0.3);
     }
   }
   &-buttons {
