--- a/src/App.scss
+++ b/src/App.scss
@@ -20,10 +20,10 @@
   }
   &-body {
     background-color: #f5f5f5;
-    width: calc(100% - 280px);
-    @media (max-width: variables.$breakpoint-lg) {
-      width: calc(100% - 50px);
-    }
+    // width: calc(100% - 280px);
+    // @media (max-width: variables.$breakpoint-lg) {
+    width: calc(100% - 50px);
+    // }
   }
   &-content {
     margin-top: 36px;
