--- a/src/components/modules/field-audio-overview/field-audio-overview.module.scss
+++ b/src/components/modules/field-audio-overview/field-audio-overview.module.scss
@@ -9,7 +9,7 @@
     background-size: cover;
     width: 100%;
     height: 55%;
-    min-height: 420px;
+    min-height: 460px;
     border-radius: 10px 10px 0 0;
     position: relative;
     @media (max-width: variables.$breakpoint-lg) {
@@ -35,7 +35,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     > div:not(:last-child) {
-      margin-bottom: 28px;
+      margin-bottom: 32px;
       @media (max-width: variables.$breakpoint-lg) {
         margin-bottom: 16px;
       }
@@ -109,7 +109,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background-color: rgba($color: #dadada, $alpha: 0.4);
+      background-color: rgba($color: #dadada, $alpha: 0.5);
       padding: 8px 2px;
       border: 1px solid variables.$tertiary-color;
       svg {
@@ -123,6 +123,10 @@
           width: 25%;
           > div {
             border-color: variables.$primary-color;
+            background-color: rgba(
+              $color: variables.$primary-color,
+              $alpha: 0.6
+            );
             width: 42px;
             height: 42px;
             @media (max-width: variables.$breakpoint-lg) {
