--- a/src/components/cores/audio-player/audio-player.module.scss
+++ b/src/components/cores/audio-player/audio-player.module.scss
@@ -6,7 +6,7 @@
   border-radius: 50%;
   > div {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
