--- a/src/pages/recordings/recordings.module.scss
+++ b/src/pages/recordings/recordings.module.scss
@@ -4,7 +4,7 @@
   &-container {
     display: flex;
     justify-content: space-between;
-    //align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     width: 100%;
   }
@@ -19,19 +19,9 @@
       }
     }
   }
-  &-highlights-container {
+  &-field-container {
     width: 30%;
-    ul {
-      padding-inline-start: 0px;
-      > li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 16px;
-        font-size: 16px;
-        cursor: pointer;
-      }
-    }
+    padding: 8px;
   }
   &-audio {
     display: flex;
