--- a/src/components/cores/audio-player/audio-player.module.scss
+++ b/src/components/cores/audio-player/audio-player.module.scss
@@ -10,6 +10,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+
     > img {
       width: 80%;
       height: 80%;
@@ -17,9 +18,51 @@
       object-fit: contain;
     }
   }
-
+  &-image {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 85%;
+    > span {
+      width: 8%;
+      border-radius: 5px;
+      background-color: white;
+    }
+    &-0,
+    &-7 {
+      height: 8px;
+    }
+    &-1,
+    &-3 {
+      height: 12px;
+    }
+    &-4 {
+      height: 5px;
+    }
+    &-5 {
+      height: 8px;
+    }
+    &-2 {
+      height: 20px;
+    }
+    &-6 {
+      height: 15px;
+    }
+  }
   &-active {
     background-color: #5085f0;
     color: white;
+  }
+  &-canvas {
+    position: absolute;
+    z-index: 100;
+    width: 48px;
+    height: 48px;
+    @media (max-width: variables.$breakpoint-lg) {
+      left: -3px;
+      bottom: -3px;
+      width: 42px;
+      height: 42px;
+    }
   }
 }
