--- a/src/components/cores/player/player.module.scss
+++ b/src/components/cores/player/player.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-self: center;
-
   &-number {
     cursor: pointer;
     width: 42px;
@@ -50,6 +49,7 @@
     width: fit-content;
     margin: 2px auto;
     font-size: 12px;
+    position: relative;
     @media (max-width: variables.$breakpoint-lg) {
       font-size: 11px;
     }
