--- a/src/components/cores/audio-player/audio-player.module.scss
+++ b/src/components/cores/audio-player/audio-player.module.scss
@@ -26,7 +26,7 @@
     > span {
       width: 8%;
       border-radius: 5px;
-      background-color: white;
+      background-color: black;
     }
     &-0,
     &-7 {
