--- a/src/components/cores/video-player/video-player.module.scss
+++ b/src/components/cores/video-player/video-player.module.scss
@@ -1,13 +1,52 @@
 .video-player {
-  min-height: 400px;
+  //min-height: 400px;
   width: 100%;
   position: relative;
-  > div {
+  &-container {
+    width: 100%;
+    height: 100%;
+    > div {
+      position: absolute;
+      background-color: rgba($color: #000000, $alpha: 0.2);
+      height: calc(100% - 3px);
+      width: 20%;
+      bottom: 0;
+      top: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      z-index: 2;
+      cursor: pointer;
+      &:hover {
+        opacity: 1;
+      }
+      svg {
+        width: 25px;
+        height: 25px;
+        stroke: black;
+      }
+      &:first-child {
+        left: 0;
+        border-radius: 20px 0 0 20px;
+        svg {
+          transform: rotate(90deg);
+        }
+      }
+      &:last-child {
+        right: 0;
+        border-radius: 0 20px 20px 0;
+
+        svg {
+          transform: rotate(-90deg);
+        }
+      }
+    }
+  }
+  &-file {
     position: absolute;
     top: 0;
     left: 0;
-  }
-  &-file {
     width: 100%;
     height: 100%;
     display: flex;
