--- a/src/components/cores/video-player/video-player.module.scss
+++ b/src/components/cores/video-player/video-player.module.scss
@@ -1,5 +1,4 @@
 .video-player {
-  //min-height: 400px;
   width: 100%;
   position: relative;
   &-container {
@@ -44,6 +43,7 @@
     }
   }
   &-file {
+    min-height: 400px;
     position: absolute;
     top: 0;
     left: 0;
