--- a/src/components/cores/video-player/video-player.module.scss
+++ b/src/components/cores/video-player/video-player.module.scss
@@ -2,7 +2,7 @@
 
 .video-player {
   width: 100%;
-
+  //position: relative;
   &-button {
     position: absolute;
     top: calc(50% - 30px);
@@ -25,55 +25,8 @@
       fill: variables.$primary-color;
     }
   }
-  // &-container {
-  //   width: 100%;
-  //   height: 100%;
-  //   video > div {
-  //     z-index: 5;
-  //   }
-  //   > div {
-  //     position: absolute;
-  //     background-color: rgba($color: #000000, $alpha: 0.2);
-  //     height: calc(100% - 3px);
-  //     width: 20%;
-  //     bottom: 0;
-  //     top: 0;
-  //     display: flex;
-  //     align-items: center;
-  //     justify-content: center;
-  //     opacity: 0;
-  //     z-index: 0;
-  //     cursor: pointer;
-  //     &:hover {
-  //       opacity: 1;
-  //     }
-  //     svg {
-  //       width: 40px;
-  //       height: 40px;
-  //       stroke: black;
-  //     }
-  //     &:first-child {
-  //       left: 0;
-  //       border-radius: 20px 0 0 20px;
-  //       svg {
-  //         transform: rotate(90deg);
-  //       }
-  //     }
-  //     &:last-child {
-  //       right: 0;
-  //       border-radius: 0 20px 20px 0;
-
-  //       svg {
-  //         //transform: rotate(-90deg);
-  //       }
-  //     }
-  //   }
-  // }
   &-file {
     min-height: 400px;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     display: flex;
