--- a/src/components/cores/video-controls/video-controls.module.scss
+++ b/src/components/cores/video-controls/video-controls.module.scss
@@ -34,16 +34,12 @@
         padding: 4px 8px;
         border-radius: 15px;
 
-        > div > div {
-          display: flex;
-          align-items: center;
-        }
         b {
           font-size: 13px;
         }
         svg {
-          width: 20px;
-          height: 20px;
+          width: 21px;
+          height: 21px;
           stroke: white;
         }
         &:hover {
@@ -52,8 +48,33 @@
       }
     }
   }
-  .big-icon svg {
-    width: 23px;
-    height: 23px;
+  &-volume {
+    &-content {
+      padding: 8px 12px;
+      border-radius: 5px;
+    }
+    > div > div:first-child {
+      padding: 4px 8px;
+      border-radius: 15px;
+      svg {
+        width: 23px;
+        height: 23px;
+        stroke: white;
+        path {
+          fill: none;
+        }
+      }
+      &:hover {
+        background-color: rgba($color: #ffffff, $alpha: 0.1);
+      }
+    }
+  }
+  .big-icon {
+    width: 26px;
+    height: 26px;
+    svg {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
