--- a/src/components/modules/interactions/interactions.module.scss
+++ b/src/components/modules/interactions/interactions.module.scss
@@ -30,14 +30,13 @@
       > *:not(:last-child) {
         margin-right: 16px;
       }
-      > span {
+      > span svg {
         cursor: pointer;
-        width: 13px;
-        height: 13px;
-        border: 3px dashed black;
+        width: 23px;
+        height: 23px;
         @media (max-width: variables.$breakpoint-lg) {
-          width: 10px;
-          height: 10px;
+          width: 18px;
+          height: 18px;
         }
       }
     }
