--- a/src/components/modules/tags/tags.module.scss
+++ b/src/components/modules/tags/tags.module.scss
@@ -29,8 +29,9 @@
   }
   &-item {
     padding: 8px 16px;
-    &:not(:last-child) {
-      margin-bottom: 8px;
-    }
+    margin-top: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
