--- a/src/components/modules/tags/tags.module.scss
+++ b/src/components/modules/tags/tags.module.scss
@@ -28,10 +28,26 @@
     }
   }
   &-item {
-    padding: 8px 16px;
+    padding: 8px;
     margin-top: 12px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    > span {
+      display: flex;
+      align-items: center;
+      svg {
+        width: 18px;
+        height: 18px;
+        stroke: black;
+        margin-left: 4px;
+        padding: 4px;
+        border-radius: 15px;
+        cursor: pointer;
+        &:hover {
+          background-color: rgba($color: #000000, $alpha: 0.1);
+        }
+      }
+    }
   }
 }
