--- a/src/components/cores/tag-item/tag-item.module.scss
+++ b/src/components/cores/tag-item/tag-item.module.scss
@@ -1,34 +1,45 @@
+@use "src/variables";
+
 .tag-item {
   width: 100%;
   padding: 8px;
   margin-top: 16px;
-  min-height: 50px;
-
   > div {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    > input {
+    > div > div:first-child {
+      margin-bottom: 8px;
+    }
+    small {
+      color: variables.$primary-color;
+      &::after {
+        content: "|";
+        font-size: 16px;
+        padding: 0 8px;
+        color: rgba($color: variables.$primary-color, $alpha: 0.3);
+      }
+    }
+    > textarea {
       width: 100%;
-      padding: 6px 8px;
+      padding: 6px 2px;
       border-radius: 5px;
+      margin-right: 8px;
     }
     > span {
       display: flex;
       align-items: center;
-      > div {
-        margin-left: 8px;
-      }
-      svg {
-        width: 18px;
-        height: 18px;
-        stroke: black;
-        padding: 4px;
-        border-radius: 15px;
-        cursor: pointer;
-        &:hover {
-          background-color: rgba($color: #000000, $alpha: 0.1);
-        }
+    }
+
+    svg {
+      width: 18px;
+      height: 18px;
+      stroke: black;
+      padding: 4px;
+      border-radius: 15px;
+      cursor: pointer;
+      &:hover {
+        background-color: rgba($color: #000000, $alpha: 0.1);
       }
     }
   }
