--- a/src/components/modules/tags/tags.module.scss
+++ b/src/components/modules/tags/tags.module.scss
@@ -6,11 +6,10 @@
     min-height: 45px;
   }
   &-list {
-    margin-top: 24px;
     overflow-y: auto;
     max-height: 250px;
     border-radius: 10px;
-    padding: 0 8px 8px 0;
+    padding: 12px 8px 12px 0;
     > div {
       width: 100%;
     }
