--- a/src/components/cores/tag-item/tag-item.module.scss
+++ b/src/components/cores/tag-item/tag-item.module.scss
@@ -10,13 +10,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    > div > div:first-child {
-      margin-bottom: 8px;
-    }
-    span {
-      display: flex;
-      align-items: center;
-    }
     small {
       color: variables.$primary-color;
       &::after {
@@ -27,35 +20,50 @@
       }
     }
     > textarea {
-      width: 100%;
+      flex: 1;
       padding: 6px 2px;
       border-radius: 5px;
       border-width: 2px;
-      margin-right: 8px;
+      margin: 0 8px;
     }
   }
   &-title {
     display: flex;
     align-items: center;
-
-    > span > span {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      border: 1px solid variables.$primary-color;
-      margin-right: 6px;
+    > span {
+      display: flex;
+      align-items: center;
+      > span {
+        cursor: default;
+      }
     }
   }
-  &-buttons {
+  &-color {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    border: 1px solid variables.$primary-color;
+    margin-right: 6px;
+    cursor: pointer;
+  }
+
+  &-icons {
+    display: flex;
+    align-items: center;
     svg {
       width: 18px;
       height: 18px;
-      padding: 8px;
+      padding: 4px 8px;
       border-radius: 15px;
       cursor: pointer;
       &:hover {
         background-color: rgba($color: #000000, $alpha: 0.1);
       }
+    }
+  }
+  &-buttons {
+    > div:first-child {
+      margin-bottom: 8px;
     }
   }
 }
