--- a/src/components/cores/video-controls/video-controls.module.scss
+++ b/src/components/cores/video-controls/video-controls.module.scss
@@ -1,13 +1,12 @@
 @use "src/variables";
 
 .video-controls {
-  //padding-top: 16px;
   padding-bottom: 8px;
   background-color: rgba($color: variables.$primary-color, $alpha: 1);
   border-radius: 10px;
   color: white;
   &-progress {
-    width: 100%;
+    flex: 1;
     margin: 0 12px;
     > div:first-child {
       position: relative;
