--- a/src/components/modules/tags/tags.module.scss
+++ b/src/components/modules/tags/tags.module.scss
@@ -10,6 +10,7 @@
     max-height: 250px;
     border-radius: 10px;
     padding: 12px 8px 12px 0;
+    box-sizing: content-box;
     > div {
       width: 100%;
     }
