--- a/src/components/modules/header/header.module.scss
+++ b/src/components/modules/header/header.module.scss
@@ -14,4 +14,21 @@
       margin-right: 48px;
     }
   }
+  &-profile {
+    > li,
+    &-coach-switch {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    }
+    &-coach {
+      flex-direction: column;
+      > input {
+        margin-top: 8px;
+        border-radius: 5px;
+        padding: 2px 4px;
+      }
+    }
+  }
 }
