--- a/src/components/cores/audio-player/audio-player.module.scss
+++ b/src/components/cores/audio-player/audio-player.module.scss
@@ -3,20 +3,12 @@
 .audio-player {
   width: 100%;
   height: 100%;
-  border-radius: 50%;
   > div {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-
-    > img {
-      width: 80%;
-      height: 80%;
-      margin: auto;
-      object-fit: contain;
-    }
   }
   &-image {
     display: flex;
@@ -30,23 +22,23 @@
     }
     &-0,
     &-7 {
-      height: 8px;
+      height: 10px;
     }
     &-1,
     &-3 {
-      height: 12px;
+      height: 14px;
     }
     &-4 {
-      height: 5px;
-    }
-    &-5 {
       height: 8px;
     }
+    &-5 {
+      height: 10px;
+    }
     &-2 {
-      height: 20px;
+      height: 22px;
     }
     &-6 {
-      height: 15px;
+      height: 17px;
     }
   }
   &-active {
@@ -63,6 +55,27 @@
       bottom: -3px;
       width: 42px;
       height: 42px;
+    }
+  }
+  &-coach {
+    padding: 2px 4px;
+    display: flex;
+    align-items: center;
+    font-size: 13px;
+    border: 2px solid white;
+    border-radius: 5px;
+    @media (max-width: variables.$breakpoint-lg) {
+      font-size: 11px;
+      padding: 2px;
+    }
+    > div {
+      margin-left: 2px;
+      width: 15px;
+      height: 15px;
+      @media (max-width: variables.$breakpoint-lg) {
+        width: 13px;
+        height: 13px;
+      }
     }
   }
 }
