--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,5 +8,6 @@ $breakpoint-xxl: calc(1400px + 280px) !default;
 $primary-color: #333333;
 $secondary-color: #9a9a9a;
 $tertiary-color: #c4c4c4;
+$admin-color: #153a9f;
 $POSITIVE-color: #21ce71;
 $NEGATIVE-color: #f05056;
