--- a/src/components/cores/menu-item/menu-item.module.scss
+++ b/src/components/cores/menu-item/menu-item.module.scss
@@ -12,11 +12,16 @@
   text-decoration: none;
   > span {
     width: calc(100% - 45px);
+    white-space: nowrap;
   }
   &-icon {
+    width: 21px;
+    height: 21px;
+    display: flex;
+    align-items: center;
     svg {
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       vertical-align: middle;
       path {
         fill: white;
