feat: added create profile page

--- a/src/components/cores/dropdown/dropdown.module.scss
+++ b/src/components/cores/dropdown/dropdown.module.scss
@@ -19,6 +19,14 @@
       justify-content: center;
     }
   }
+  &-admin {
+    > div {
+      min-height: 40px;
+      svg path {
+        fill: white;
+      }
+    }
+  }
   &-content {
     display: none;
     position: absolute;
