--- a/src/components/cores/player-select/player-select.module.scss
+++ b/src/components/cores/player-select/player-select.module.scss
@@ -61,8 +61,11 @@
     background-color: white;
     border-radius: 5px;
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     > div {
       margin-right: 24px;
+      margin-bottom: 8px;
     }
   }
 }
