fix: fixed profile form and changed way to access admin panel

--- a/src/components/cores/dropdown/dropdown.module.scss
+++ b/src/components/cores/dropdown/dropdown.module.scss
@@ -22,6 +22,9 @@
   &-admin {
     > div {
       min-height: 40px;
+      @media (max-width: variables.$breakpoint-lg) {
+        min-height: 35px;
+      }
       svg path {
         fill: white;
       }
