--- a/src/App.scss
+++ b/src/App.scss
@@ -23,11 +23,9 @@
   &-body {
     background-color: #f5f5f5;
     // width: calc(100% - 280px);
-    // @media (max-width: variables.$breakpoint-lg) {
     width: calc(100% - 50px);
-    // }
-    &-admin {
-      //   background-color: variables.$primary-color;
+    @media (max-width: variables.$breakpoint-lg) {
+      width: calc(100% - 45px);
     }
   }
   &-content {
