--- a/src/components/modules/sidebar/sidebar.module.scss
+++ b/src/components/modules/sidebar/sidebar.module.scss
@@ -11,7 +11,9 @@
   top: 0;
   bottom: 0;
   left: 0;
-  // }
+  @media (max-width: variables.$breakpoint-lg) {
+    width: 45px;
+  }
   > div {
     height: calc(100vh - 72px);
   }
@@ -85,12 +87,18 @@
       display: flex;
       justify-content: center;
       align-items: flex-end;
-      margin-bottom: 45px;
+      margin-bottom: 55px;
+      @media (max-width: variables.$breakpoint-lg) {
+        margin-bottom: 35px;
+      }
       > img {
         transform: rotate(270deg);
         width: 100px;
         object-fit: contain;
         cursor: pointer;
+        @media (max-width: variables.$breakpoint-lg) {
+          width: 90px;
+        }
       }
       // }
     }
