--- a/src/pages/admin/create-profile/create-profile.module.scss
+++ b/src/pages/admin/create-profile/create-profile.module.scss
@@ -1,18 +1,42 @@
+@use "src/variables";
+
 .create-profile {
   &-form {
-    > div {
-      margin-bottom: 12px;
-      label {
-        display: inline-block;
-        margin-bottom: 8px;
+    margin-top: 46px;
+    @media (max-width: variables.$breakpoint-lg) {
+      margin-top: 32px;
+    }
+    &-line {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 24px;
+      @media (max-width: variables.$breakpoint-lg) {
+        flex-wrap: wrap;
+        margin-bottom: 0;
       }
-      > input {
-        padding: 0 8px;
-        height: 40px;
-        border-radius: 5px;
-        border-color: #d5d5d5;
-        width: 100%;
-        box-sizing: border-box;
+      > div {
+        width: 49%;
+        display: flex;
+        flex-direction: column;
+        @media (max-width: variables.$breakpoint-lg) {
+          width: 100%;
+          margin-bottom: 12px;
+        }
+        label {
+          display: inline-block;
+          margin-bottom: 8px;
+        }
+        input {
+          padding: 0 8px;
+          height: 40px;
+          border-radius: 5px;
+          border-color: #d5d5d5;
+          box-sizing: border-box;
+          @media (max-width: variables.$breakpoint-lg) {
+            height: 35px;
+          }
+        }
       }
     }
   }
