--- a/src/pages/admin/create-team/create-team.module.scss
+++ b/src/pages/admin/create-team/create-team.module.scss
@@ -5,6 +5,9 @@
     display: block;
     > div {
       margin-bottom: 24px;
+      @media (max-width: variables.$breakpoint-lg) {
+        margin-bottom: 20px;
+      }
       label {
         display: inline-block;
         margin-bottom: 8px;
@@ -20,6 +23,9 @@
         border-color: #d5d5d5;
         width: 100%;
         box-sizing: border-box;
+        @media (max-width: variables.$breakpoint-lg) {
+          height: 35px;
+        }
       }
     }
   }
