fix: added multiple selection for profile form

--- a/src/components/cores/dropdown/dropdown.module.scss
+++ b/src/components/cores/dropdown/dropdown.module.scss
@@ -21,9 +21,11 @@
   }
   &-admin {
     > div {
-      min-height: 40px;
+      min-height: 45px;
+      height: 45px;
       @media (max-width: variables.$breakpoint-lg) {
-        min-height: 35px;
+        min-height: 40px;
+        height: 40px;
       }
       svg path {
         fill: white;
